@@ -49,20 +49,20 @@ committers_unable_to_review = [
     Committer("Aaron Boodman", "aa@chromium.org"),
     Committer("Adam Langley", "agl@chromium.org"),
     Committer("Albert J. Wong", "ajwong@chromium.org"),
+    Committer("Anthony Ricaud", "rik@webkit.org"),
     Committer("Anton Muhin", "antonm@chromium.org"),
     Committer("Antonio Gomes", "tonikitoo@webkit.org"),
-    Committer("Anthony Ricaud", "rik@webkit.org"),
     Committer("Ben Murdoch", "benm@google.com"),
-    Committer("Chris Fleizach", "cfleizach@apple.com"),
     Committer("Brent Fulgham", "bfulgham@webkit.org"),
     Committer("Brian Weinstein", "bweinstein@apple.com"),
     Committer("Cameron McCormack", "cam@webkit.org"),
+    Committer("Chris Fleizach", "cfleizach@apple.com"),
     Committer("Collin Jackson", "collinj@webkit.org"),
     Committer("Csaba Osztrogonac", "ossy@webkit.org"),
     Committer("Daniel Bates", "dbates@webkit.org"),
-    Committer("Drew Wilson", "atwilson@chromium.org"),
     Committer("Dirk Schulze", "krit@webkit.org"),
     Committer("Dmitry Titov", "dimich@chromium.org"),
+    Committer("Drew Wilson", "atwilson@chromium.org"),
     Committer("Dumitru Daniliuc", "dumi@chromium.org"),
     Committer("Eli Fidler", "eli@staikos.net"),
     Committer("Eric Roman", "eroman@chromium.org"),
@@ -101,8 +101,8 @@ committers_unable_to_review = [
 # This is intended as a cannonical, machine-readable list of all reviewers for WebKit.
 # If your name is missing here and you are a reviewer, please add it.  No review needed.
 reviewers_list = [
-    Reviewer("Adam Barth", "abarth@webkit.org"),
     Reviewer("Ada Chan", "adachan@apple.com"),
+    Reviewer("Adam Barth", "abarth@webkit.org"),
     Reviewer("Adam Roben", "aroben@apple.com"),
     Reviewer("Adam Treat", "treat@kde.org"),
     Reviewer("Adele Peterson", "adele@apple.com"),
@@ -122,8 +122,8 @@ reviewers_list = [
     Reviewer("David Kilzer", "ddkilzer@webkit.org"),
     Reviewer("David Levin", "levin@chromium.org"),
     Reviewer("Dimitri Glazkov", "dglazkov@chromium.org"),
-    Reviewer("Don Melton", "gramps@apple.com"),
     Reviewer("Dmitri Titov", "dimich@chromium.org"),
+    Reviewer("Don Melton", "gramps@apple.com"),
     Reviewer("Eric Carlson", "eric.carlson@apple.com"),
     Reviewer("Eric Seidel", "eric@webkit.org"),
     Reviewer("Gavin Barraclough", "barraclough@apple.com"),
